Two launch modes