@@ -49,7 +49,9 @@ JLINK_VM_OPTIONS="\
 --add-exports jdk.compiler/com.sun.tools.javac.util=javacs \
 --add-opens jdk.compiler/com.sun.tools.javac.api=javacs"
 DIR=`dirname $0`
-$DIR/java $JLINK_VM_OPTIONS -m javacs/org.javacs.Main $@' > dist/windows/bin/launcher
+$DIR/java $JLINK_VM_OPTIONS -m javacs/org.javacs.Main $@' > dist/windows/bin/langserver
+chmod +x langserver
+
 
 echo '@echo off
 set JLINK_VM_OPTIONS="\
@@ -62,4 +64,33 @@ set JLINK_VM_OPTIONS="\
 --add-exports jdk.compiler/com.sun.tools.javac.util=javacs \
 --add-opens jdk.compiler/com.sun.tools.javac.api=javacs"
 set DIR=%~dp0
-"%DIR%\java" %JLINK_VM_OPTIONS% -m javacs/org.javacs.Main %*' > dist/windows/bin/launcher.bat
+"%DIR%\java" %JLINK_VM_OPTIONS% -m javacs/org.javacs.Main %*' > dist/windows/bin/langserver.bat
+chmod +x langserver.bat
+
+echo '#!/bin/sh
+JLINK_VM_OPTIONS="\
+--add-exports jdk.compiler/com.sun.tools.javac.api=javacs \
+--add-exports jdk.compiler/com.sun.tools.javac.code=javacs \
+--add-exports jdk.compiler/com.sun.tools.javac.comp=javacs \
+--add-exports jdk.compiler/com.sun.tools.javac.main=javacs \
+--add-exports jdk.compiler/com.sun.tools.javac.tree=javacs \
+--add-exports jdk.compiler/com.sun.tools.javac.model=javacs \
+--add-exports jdk.compiler/com.sun.tools.javac.util=javacs \
+--add-opens jdk.compiler/com.sun.tools.javac.api=javacs"
+DIR=`dirname $0`
+$DIR/java $JLINK_VM_OPTIONS -m javacs/org.javacs.JavaDebugServer $@' > dist/windows/bin/debugadapter
+chmod +x debugadapter
+
+echo '@echo off
+set JLINK_VM_OPTIONS="\
+--add-exports jdk.compiler/com.sun.tools.javac.api=javacs \
+--add-exports jdk.compiler/com.sun.tools.javac.code=javacs \
+--add-exports jdk.compiler/com.sun.tools.javac.comp=javacs \
+--add-exports jdk.compiler/com.sun.tools.javac.main=javacs \
+--add-exports jdk.compiler/com.sun.tools.javac.tree=javacs \
+--add-exports jdk.compiler/com.sun.tools.javac.model=javacs \
+--add-exports jdk.compiler/com.sun.tools.javac.util=javacs \
+--add-opens jdk.compiler/com.sun.tools.javac.api=javacs"
+set DIR=%~dp0
+"%DIR%\java" %JLINK_VM_OPTIONS% -m javacs/org.javacs.JavaDebugServer %*' > dist/windows/bin/debugadapter.bat
+chmod +x debugadapter.bat
